name:                venula
version:             0.1.0.0
synopsis:            Graph-based state representation and testing for Haskell
-- description:
homepage:            https://github.com/Camsbury/venula
license:             MIT
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                  Prelude
                  Venula
  -- other-modules:
  default-extensions:
                     DerivingStrategies
                     FlexibleContexts
                     FlexibleInstances
                     FunctionalDependencies
                     GeneralizedNewtypeDeriving
                     LambdaCase
                     MultiParamTypeClasses
                     NoImplicitPrelude
                     OverloadedLists
                     OverloadedStrings
                     RecordWildCards
                     ScopedTypeVariables
                     StandaloneDeriving
                     TupleSections
                     TypeApplications
  build-depends:       base-noprelude >=4.11
                     , classy-prelude
                     , hedgehog
                     , lens
                     , mtl
                     , transformers
                     , uuid